Fixing header alignment

--- a/src/sections/SuccessIndicators/styles.css
+++ b/src/sections/SuccessIndicators/styles.css
@@ -17,10 +17,3 @@
 .successIndicators-outer h3 {
   margin: 0 0 5px 0;
 }
-
-/* .successIndicators-item {
-  display: flex;
-  flex: 1;
-  flex-direction: column;
-  justify-content: flex-end;
-} */
